# space-crusher

./: CMakeLists.txt  LICENSE.txt  Makefile  README.md  collision_detection.c  game  input_handler.c  input_handler.h  main.c  main.h  render.c  sandbox.c  sandbox.h  setup.h  update.c  update.h
assets/: 000_links.txt
include/: collision_detection.h  input_handler.h  level_1.h  main.h  render.h  setup.h  update.h
src/: collision_detection.c  input_handler.c  level_1.c  main.c  render.c  sandbox.c  setup.c  update.c
